02-app-from-yaml-manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector: # <-- mapped to labels of Pods
    app: sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # <--- mapped to containerPort of Pod
      nodePort: 30202
  type: NodePort
